Added structure for images and improved documentation.
Added example aliases file and example for scan.pl.

Fixed lock-kml.pl.

--- a/.hgignore
+++ b/.hgignore
@@ -1,4 +1,6 @@
+^aliases$
 ^crontab$
+^images/
 ^live.atom$
 ^live.kml$
 ^live.rss$
@@ -6,3 +8,4 @@
 ^location.csv$
 ^timestamp$
 ^settings.pl$
+^uploads/
