--- a/crontab.dist
+++ b/crontab.dist
@@ -17,3 +17,10 @@ PERL5LIB=@@CWD@@
 
 # This pulls in Twitter (or any other RSS feed) and adds it to live.kml
 3 * * * * wget -q -O /tmp/twitter.rss http://twitter.com/statuses/user_timeline/783214.rss && TZ=GMT rss.pl /tmp/twitter.rss; rm /tmp/twitter.rss
+
+# This scans the uploads folder for JPEG images and adds them to live.kml.
+*/15 * * * * cd @@CWD@@ && TZ=GMT scan.pl uploads/*.[jJ][pP][gG]
+
+# This is an ugly hack which creates overlay.kml from live.kml by
+# removing the trailing tags and appending data to the end of it.
+#*/5 * * * * cd @@CWD@@ && (mobile.pl; cat live.kml | sed -e '/^<\/Document>$/d' -e '/^<\/kml>$/d' | cat - overlay-data > overlay.kml)
