Improved documentation and fixed scripts broken by recent changes to settings.pl. Moved example aliases and crontab to examples/ and added information on using procmail.
Better documentation on use of InstaMapper.

Fixed rss.pl, scan.pl, and mobile.pl that were broken by changes to settings.pl.

--HG--
rename : aliases.dist => examples/aliases.dist
rename : crontab.dist => examples/crontab.dist

--- a/.hgignore
+++ b/.hgignore
@@ -1,11 +1,13 @@
-^aliases$
-^crontab$
+^examples/aliases$
+^examples/crontab$
+^examples/procmailrc$
 ^images/
 ^live.atom$
 ^live.kml$
 ^live.rss$
 ^mobile.kml$
 ^location.csv$
+^overlay.kml$
 ^timestamp$
 ^settings.pl$
 ^uploads/
