--- a/examples/crontab.dist
+++ b/examples/crontab.dist
@@ -3,20 +3,19 @@ PERL5LIB=@@CWD@@
 
 # These next two lines keep location data updated every 5 minutes, but
 # only adds a placemark every 15 minutes (-n disables the placemark).
-0,15,30,45 4-20 * * * updatelocation.pl
-5,10,20,25,35,40,50,55 4-20 * * * updatelocation.pl -n
+0,15,30,45 6-22 * * * updatelocation.pl
+5,10,20,25,35,40,50,55 6-22 * * * updatelocation.pl -n
 
 # These two lines update location data, but only add one point to the
-# path, instead of all points collected from Instamapper.
-*/10 21-23 * * * updatelocation.pl -s
-*/10 0-3 * * * updatelocation.pl -s
+# path, instead of all points collected from InstaMapper.
+*/10 0-5,23 * * * updatelocation.pl -s
 
 # This creates mobile.kml from live.kml which is better designed for
 # Google Maps on cellphones.
 */10 * * * * mobile.pl
 
 # This pulls in Twitter (or any other RSS feed) and adds it to live.kml
-3 * * * * wget -q -O /tmp/twitter.rss http://twitter.com/statuses/user_timeline/783214.rss && TZ=GMT rss.pl /tmp/twitter.rss; rm /tmp/twitter.rss
+*/10 * * * * wget -q -O /tmp/twitter.rss http://twitter.com/statuses/user_timeline/783214.rss && TZ=GMT rss.pl /tmp/twitter.rss; rm /tmp/twitter.rss
 
 # This scans the uploads folder for JPEG images and adds them to live.kml.
 */15 * * * * cd @@CWD@@ && TZ=GMT scan.pl uploads/*.[jJ][pP][gG]
