--- a/live.atom.dist
+++ b/live.atom.dist
@@ -8,5 +8,5 @@
     <uri>@@WEBSITE@@</uri>
   </author>
   <updated>2010-01-01T00:00:00Z</updated>
-  <link rel="self" type="application/atom+xml" href="http://www.example.org/live.atom"/>
+  <link rel="self" type="application/atom+xml" href="@@WEBSITE@@/live.atom"/>
 </feed>
