--- a/examples/crontab.dist
+++ b/examples/crontab.dist
@@ -15,10 +15,10 @@ PERL5LIB=@@CWD@@
 */10 * * * * mobile.pl
 
 # This pulls in Twitter (or any other RSS feed) and adds it to live.kml
-*/10 * * * * wget -q -O /tmp/twitter.rss http://twitter.com/statuses/user_timeline/783214.rss && TZ=GMT rss.pl /tmp/twitter.rss; rm /tmp/twitter.rss
+*/10 * * * * wget -q -O /tmp/twitter.rss http://twitter.com/statuses/user_timeline/783214.rss && rss.pl /tmp/twitter.rss; rm /tmp/twitter.rss
 
 # This scans the uploads folder for JPEG images and adds them to live.kml.
-*/15 * * * * cd @@CWD@@ && TZ=GMT scan.pl uploads/*.[jJ][pP][gG]
+*/15 * * * * cd @@CWD@@ && scan.pl uploads/*.[jJ][pP][gG]
 
 # This is an ugly hack which creates overlay.kml from live.kml by
 # removing the trailing tags and appending data to the end of it.
