--- a/examples/procmailrc.dist
+++ b/examples/procmailrc.dist
@@ -4,7 +4,7 @@ PERL5LIB=@@CWD@@
 # Handle incoming photos for photocatalog and send them to email.pl
 :0:
 * ^To:.*photocatalog@
-|env TZ=GMT email.pl
+|env email.pl
 
 # This example first saves a copy of the email to the photos mailbox
 # before forwarding them to email.pl
@@ -12,4 +12,4 @@ PERL5LIB=@@CWD@@
 * ^To:.*photocatalog@
 photos
 :0a:
-|env TZ=GMT email.pl
+|env email.pl
