Preliminary GPX support now works.
./gpx.pl creates an InstaMapper compatible CSV file, gps-out.csv, which can be imported by ./updatelocation.pl gps-out.csv.  Since the software does not currently support multiple sources of data, this works best when only used with GPX files or the GPX data does not overlap any InstaMapper data.

--- a/examples/crontab.dist
+++ b/examples/crontab.dist
@@ -15,7 +15,7 @@ PERL5LIB=@@CWD@@
 */10 * * * * mobile.pl
 
 # This pulls in Twitter (or any other RSS feed) and adds it to live.kml
-*/10 * * * * wget -q -O /tmp/twitter.rss http://twitter.com/statuses/user_timeline/783214.rss && rss.pl /tmp/twitter.rss; rm /tmp/twitter.rss
+*/10 * * * * rss.pl http://twitter.com/statuses/user_timeline/783214.rss
 
 # This scans the uploads folder for JPEG images and adds them to live.kml.
 */15 * * * * cd @@CWD@@ && scan.pl uploads/*.[jJ][pP][gG]
