--- a/examples/crontab.dist
+++ b/examples/crontab.dist
@@ -18,7 +18,7 @@ PERL5LIB=@@CWD@@
 */10 * * * * rss.pl http://twitter.com/statuses/user_timeline/783214.rss
 
 # This scans the uploads folder for JPEG images and adds them to live.kml.
-*/15 * * * * cd @@CWD@@ && scan.pl uploads/*.[jJ][pP][gG]
+*/15 * * * * scan.pl
 
 # This is an ugly hack which creates overlay.kml from live.kml by
 # removing the trailing tags and appending data to the end of it.
