--- a/live.rss.dist
+++ b/live.rss.dist
@@ -10,12 +10,12 @@
   <channel>
     <title>@@TITLE@@</title>
     <link>@@WEBSITE@@</link>
-    <description>My life is very adventurous!</description>
+    <description>@@DESCRIPTION@@</description>
     <language>en</language>
     <copyright>Copyright © 2010, example.org</copyright>
     <pubDate>Fri, 01 Jan 2010 00:00:00 GMT</pubDate>
     <lastBuildDate>Fri, 01 Jan 2010 00:00:00 GMT</lastBuildDate>
     <managingEditor>@@EMAIL@@ (@@AUTHOR@@)</managingEditor>
     <webMaster>@@EMAIL@@ (@@AUTHOR@@)</webMaster>
-</channel>
+  </channel>
 </rss>
