Made default Twitter RSS feed into a setting.
Installer now updates the settings file and leaves it out of the crontab file.

--- a/settings.pl.dist
+++ b/settings.pl.dist
@@ -22,4 +22,7 @@ $settings->{dbPass} = "S3cr3t!";
 # Location where photocatalog is hosted.
 $settings->{website} = "@@WEBSITE@@";
 
+# URL for Twitter RSS feed.
+$settings->{rssFeed} = "@@RSSFEED@@";
+
 1;
