--- a/examples/crontab.dist
+++ b/examples/crontab.dist
@@ -15,7 +15,7 @@ PERL5LIB=@@CWD@@
 */10 * * * * mobile.pl
 
 # This pulls in Twitter (or any other RSS feed) and adds it to live.kml.
-*/10 * * * * rss.pl @@RSSFEED@@
+*/10 * * * * rss.pl
 
 # This scans the uploads folder for JPEG images and adds them to live.kml.
 */15 * * * * scan.pl
