--- a/live.kml.dist
+++ b/live.kml.dist
@@ -57,14 +57,14 @@
         <hotSpot x="32" y="30" xunits="pixels" yunits="pixels"/>
       </IconStyle>
     </Style>
-    <Placemark>
+    <Placemark id='loc'>
       <name>My Location</name>
       <styleUrl>#position</styleUrl>
       <Point>
         <coordinates>0.00000,0.00000,0.0</coordinates>
       </Point>
     </Placemark>
-    <Placemark>
+    <Placemark id='path'>
       <name>Path</name>
       <styleUrl>#line</styleUrl>
       <LineString>
@@ -72,7 +72,7 @@
 	</coordinates>
       </LineString>
     </Placemark>
-    <Folder>
+    <Folder id='place'>
       <name>Locations</name>
       <description>Everywhere I've been</description>
       <styleUrl>#check-hide-children</styleUrl>
