Added support for a XML configuration file to replace the current Perl configuration.  Format is not finalized yet.
Fixed a problem with installer not setting device key.

--- a/settings.pl.dist
+++ b/settings.pl.dist
@@ -34,7 +34,7 @@ $settings->{sources} = [
 		id => 2,
 		type => 'InstaMapper',
 		name => 'InstaMapper',
-		deviceKey => '@@DEVICEKEY',
+		deviceKey => '@@DEVICEKEY@@',
 		apiKey => '@@APIKEY@@',
 		kml => {
 			position => 'loc',
