--- a/.hgignore
+++ b/.hgignore
@@ -2,15 +2,17 @@
 ^examples/crontab$
 ^examples/procmailrc$
 ^images/
-^lib/OAuthConf.pm$
-^live.atom$
-^live.kml$
-^live.rss$
+^images\.csv$
+^lib/OAuthConf\.pm$
+^live\.atom$
+^live\.kml$
+^live\.rss$
 ^lock$
-^mobile.kml$
-^location.csv$
-^overlay.kml$
-^settings.pl$
+^mobile\.kml$
+^location\.csv$
+^overlay\.kml$
+^settings\.pl$
+^settings\.xml$
 ^tags$
 ^timestamp$
 ^tmp/
